section-5: WebApiExRateProvider 리팩토링